--- a/SimpleMusicPlayer/Base.lproj/Main.storyboard
+++ b/SimpleMusicPlayer/Base.lproj/Main.storyboard
@@ -337,10 +337,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GCS-CZ-qTp">
-                                <rect key="frame" x="75" y="358" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3UW-Sp-wdk">
                                 <rect key="frame" x="26" y="47" width="62" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -350,9 +346,20 @@
                                     <action selector="pressedBack:" destination="WCQ-Rp-ggj" eventType="touchUpInside" id="OKR-2R-0Af"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GCS-CZ-qTp">
+                                <rect key="frame" x="16" y="258.66666666666669" width="358" height="327.00000000000006"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="327" id="M5t-N2-MIO"/>
+                                    <constraint firstAttribute="width" constant="358" id="oCv-aH-Qoq"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="SCc-ho-EPX"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="GCS-CZ-qTp" firstAttribute="centerX" secondItem="GTy-2h-XGc" secondAttribute="centerX" id="iFU-eI-cbu"/>
+                            <constraint firstItem="GCS-CZ-qTp" firstAttribute="centerY" secondItem="GTy-2h-XGc" secondAttribute="centerY" id="ozQ-dH-aVl"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="image" destination="GCS-CZ-qTp" id="Ajy-Of-Lkm"/>
@@ -360,7 +367,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y4z-ZA-620" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4891" y="-762"/>
+            <point key="canvasLocation" x="4890.7692307692305" y="-762.08530805687201"/>
         </scene>
         <!--Item-->
         <scene sceneID="Z5r-rH-6bt">
